src/compiletest/tlcell-03.stderr
error[E0308]: mismatched types
  --> $DIR/tlcell-03.rs:17:31
   |
17 |     let c1mutref = owner_b.rw(&*c1);    // Compile error
   |                               ^^^^ expected struct `main::MarkerB`, found struct `main::MarkerA`
   |
   = note: expected type `&qcell::TLCell<main::MarkerB, _>`
              found type `&qcell::TLCell<main::MarkerA, u32>`
